--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     container_name: "mysql"
     volumes:
       - test_index_db_data:/var/lib/mysql
+      - ./queries/init:/docker-entrypoint-initdb.d 
 
 
   cli:
